--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/__logo.svg">
+      <img class="header__logo" src="./images/__logo.svg" alt="Логотип с картой России">
       <div class="header__links">
         <a class="header__lang-link header__lang-link_ru" href="#">Ru</a>
         <a class="header__lang-link header__lang-link_en" href="#">En</a>
